2009-04-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fix compile error. Make sure to
	cast NULL in a vector constructor.

	* src/formats/CMakeLists.txt: Add Michael's Molpro format.

	* src/forcefield/forcefieldmmff94.cpp: Fix errors in PR#2741658
	and PR#2741669, reported by  Tushar Jain.

2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/molproformat.cpp (ReadMolecule): Added dipole 
	moments.

2009-04-07  Michael Banck  <mbanck@gmx.net>

	* src/formats/nwchemformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Fixes PR#2728437.

	* src/formats/moldenformat.cpp (ReadMolecule): Added frequencies
	and IR intensities support.  Closes PR#2737715.

	* src/formats/molproformat.cpp: New file.  Closes PR#2731625.
	* src/formats/Makefile.am: Updated.
	* src/formats/Makefile.in: Regenerated.

2009-04-06  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Handle cis/trans symbols correctly
	during reading and writing. Uses Tim's stereochemistry code which I
	inserted into the start of the file. Some notes about the code:
	(1) The legacy code did not set cis/trans bonds in rings. Don't know
	why, but I didn't change this for the moment.
	(2) The series of cis/trans symbols in an output SMILES string is
	canonical in the sense that the first symbol in any independent
	stereo system is always a forward slash.
	(3) Cis/trans symbols for ring openings/closures are shown for the
	digit attached to the double bond. (I recommend that this be part of
	the OpenSMILES specification.)

2009-03-26  Noel O'Boyle  <baoilleach@gmail.com>

	* src/formats/smilesformat.cpp: Use UINT_MAX for unassigned values
	instead of -1

2009-03-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Corrected patch from Pierre-Louis to
	ensure 80-character CONECT records.

	* CMakeLists.txt, scripts/CMakeLists.txt: Backport changes to
	build script modules from trunk.
